--- a/app/views/docs/functions-deploy.phtml
+++ b/app/views/docs/functions-deploy.phtml
@@ -101,14 +101,14 @@
 <div class="notice">
   <h2>Overwrite Warning</h2>
     <p>
-        If you made changes in the Appwrite console that is different from your <code>appwrite.json</code>, 
+        If you made changes in the Appwrite Console that is different from your <code>appwrite.json</code>, 
         using the CLI deploy command will overwrite your console changes, such as execution schedule or permissions.
         Update your <code>appwrite.json</code> manually before deploying to avoid overwriting changes.
     </p>
 </div>
 
 <h3>Manual Deployment</h3>
-<p>You can also upload your functions to be deployed using the Appwrite console. The example below shows a simple Node.JS function, but the same idea applies to any other language.</p>
+<p>You can also upload your functions to be deployed using the Appwrite Console. The example below shows a simple Node.JS function, but the same idea applies to any other language.</p>
 
 <div class="ide margin-bottom">
     <pre class="line-numbers"><code class="prism" data-prism>.
@@ -143,7 +143,7 @@
     </li>
 </ul>
 
-<p>Next, navigate to your Appwrite console and upload the function.</p>
+<p>Next, navigate to your Appwrite Console and upload the function.</p>
 
 <ol class="margin-top margin-bottom-large text-size-normal">
   <li class="margin-bottom-small">Navigate to the function you want to deploy.</li>
