--- a/app/views/docs/permissions-old.phtml
+++ b/app/views/docs/permissions-old.phtml
@@ -10,7 +10,7 @@
 
 <p>For example, only users with a guest role can access authentication endpoints while access to member users is denied.</p>
 
-<p>You can change your project members' roles from your project settings in the Appwrite console.</p>
+<p>You can change your project members' roles from your project settings in the Appwrite Console.</p>
 
 <table class="full">
     <thead>
