--- a/app/views/docs/production.phtml
+++ b/app/views/docs/production.phtml
@@ -15,7 +15,7 @@
 
 <h2><a href="/docs/production#limitConsoleAccess" id="limitConsoleAccess">Limit Console Access</a></h2>
 
-<p>Appwrite provides three different methods to limit access to your Appwrite console.</p>
+<p>Appwrite provides three different methods to limit access to your Appwrite Console.</p>
 
 <ol class="margin-top margin-bottom-large text-size-normal">
     <li>Whitelist a group of developers by IP using the <code>_APP_CONSOLE_WHITELIST_IPS</code> environment variable.</li>
