--- a/app/views/docs/custom-domains.phtml
+++ b/app/views/docs/custom-domains.phtml
@@ -356,7 +356,7 @@ $dns = [
 
 <h2><a href="/docs/custom-domains#verifyDomain" id="verifyDomain">Confirm and Verify Your Domain</a></h2>
 
-<p>Once you added your new CNAME record to your DNS settings, you will need to verify your new domain name from your Appwrite console. Enter your custom domains tab from your project settings, click the DNS Settings link and click on the 'Confirm and Verify" button. If everything went well, Appwrite will approve your domain and generate a new SSL certificate for it in the background.</p>
+<p>Once you added your new CNAME record to your DNS settings, you will need to verify your new domain name from your Appwrite Console. Enter your custom domains tab from your project settings, click the DNS Settings link and click on the 'Confirm and Verify" button. If everything went well, Appwrite will approve your domain and generate a new SSL certificate for it in the background.</p>
 
 <h2><a href="/docs/custom-domains#enjoySSLCert" id="enjoySSLCert">Enjoy your Free SSL Certificate</a></h2>
 
