--- a/app/views/docs/keys.phtml
+++ b/app/views/docs/keys.phtml
@@ -2,7 +2,7 @@
 $scopes = $this->getParam('scopes', );
 ?>
 
-<p>Using your API Keys, you can access Appwrite services using the SDK of your choice. To create a new API key, go to your API keys tab in your project setting using your Appwrite console and click the 'Add API Key' button.</p>
+<p>Using your API Keys, you can access Appwrite services using the SDK of your choice. To create a new API key, go to your API keys tab in your project setting using your Appwrite Console and click the 'Add API Key' button.</p>
 
 <p>When adding a new API Key, you can choose which scope to grant your application. If you need to replace your API Key, create a new key, update your app credentials and, once ready, delete your old key.</p>
 
