--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -56,7 +56,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
     Avoid adding additional complexity to your codebase by coding in languages you already use and love.
 </p>
 <p>
-<a href="/docs/runtimes"><i class="icon-angle-circled-right"></i>Learn more about using function runtimes</a>
+<a href="/docs/functions-runtimes"><i class="icon-angle-circled-right"></i>Learn more about using function runtimes</a>
 </p>
 
 <p>
